CSS (dávid) fixed #7

--- a/david.css
+++ b/david.css
@@ -2,5 +2,5 @@ body
 {
     background-image: url("impala.jpg");
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: cover;
 }
