--- a/david.css
+++ b/david.css
@@ -1,6 +1,4 @@
 body
 {
-    background-image: url("impala.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-color: blueviolet;
 }
