CSS kép és felsorolás

--- a/david.css
+++ b/david.css
@@ -1,4 +1,14 @@
 body
 {
-    background-color: blueviolet;
+    
+}
+#felsorolas
+{
+    color: white;
+    font-weight: bold;
+}
+
+#kep
+{
+    float: right;
 }
