--- a/index.css
+++ b/index.css
@@ -8,7 +8,8 @@ h3{
 }
 h1{
     text-align: center;
-    margin-bottom:100px;
+    margin-top: 25px;
+    margin-bottom:40px;
 }
 p{
     margin: 15px;
