--- a/zsolt.css
+++ b/zsolt.css
@@ -1,3 +1,12 @@
 body{
-    font-size: 200%;
+    background-color: bisque;
+    width: 100%;
+    padding:50px;
+}
+
+.col-6{
+    background-color: white;
+}
+p{
+    width: 100%;
 }
